// SPDX-FileCopyrightText: 2025 Carnegie Mellon University - LivingEdgeLab
//
// SPDX-License-Identifier: GPL-2.0-only

syntax = "proto3";
package steeleagle.compute;
import "steeleagle/shared/common.proto";

message ComputeResult {
  int64 frameId = 1; //for future correlation
  oneof type {
    string generic = 2; //JSON/YAML/etc
    DetectionResult detection = 3;
    AvoidanceResult avoidance = 4;
  }
}

message Detection {
  int64 detectionId = 1; // can be multiple objects per frame
  string className = 2;
  double score = 3;
  Bbox bbox = 4;
  bool hsvFilterPassed = 5;
}

message DetectionResult {
  int64 frameId = 1; //for future correlation
  repeated Detection detections = 2;
}

message AvoidanceResult {
  double actuationVector = 1;
}

message Reconfigure {
    string setDetectionModel = 1;
    //for HSV filtering of object detection results
    HSV setHSVLowerBound = 2;
    HSV setHSVUpperBound = 3;
}